# ThrustRTC

./: .gitmodules  CMakeLists.txt  CachedKernelTemplate.cpp  CachedKernelTemplate.h  DVTuple.cpp  DVTuple.h  DVVector.cpp  DVVector.h  DeviceViewable.h  LICENSE  LICENSE.txt  QuickStarting.md  README.md  TRTCContext.cpp  TRTCContext.h  TRTC_api.h  adjacent_difference.cpp  adjacent_difference.h  binary_search.cpp  binary_search.h  built_in.h  copy.cpp  copy.h  count.cpp  count.h  equal.cpp  equal.h  extrema.cpp  extrema.h  fill.cpp  fill.h  find.cpp  find.h  for.cpp  for.h  for_each.cpp  for_each.h  functor.cpp  functor.h  gather.cpp  (+38 more)
CSharp/: README.md  ThrustRTCSharp.sln
conda/: bld.bat  build.sh  meta.yaml
conda_ubuntu/: build.sh  meta.yaml
conda_windows/: bld.bat  meta.yaml
cpp/: CMakeLists.txt
docs/: Demo.md  QuickStartGuide.md  QuickStartGuide_cs.md  QuickStartGuide_java.md  README.md  _config.yml
fake_vectors/: DVConstant.cpp  DVConstant.h  DVCounter.cpp  DVCounter.h  DVCustomVector.cpp  DVCustomVector.h  DVDiscard.cpp  DVDiscard.h  DVPermutation.cpp  DVPermutation.h  DVRange.cpp  DVRange.h  DVReverse.cpp  DVReverse.h  DVTransform.cpp  DVTransform.h  DVZipped.cpp  DVZipped.h
internal/: Timing.h  cuda_inline_headers_global.hpp  cuda_wrapper.cpp  cuda_wrapper.h  general_copy_if.cpp  general_copy_if.h  general_find.cpp  general_find.h  general_reduce.cpp  general_reduce.h  general_scan.cpp  general_scan.h  general_scan_by_key.cpp  general_scan_by_key.h  impl_context.inl  launch_calc.cpp  launch_calc.h  md5.cpp  md5.h  (+7 more)
java/: CMakeLists.txt  Context.cpp  Copying.cpp  DVConstant.java  DVCounter.java  DVCustomVector.java  DVDiscard.java  DVDouble.java  DVFloat.java  DVInt16.java  DVInt32.java  DVInt64.java  DVInt8.java  DVPermutation.java  DVRange.java  DVReverse.java  DVTransform.java  DVTuple.cpp  DVTuple.java  DVVector.cpp  DVVector.java  DVVectorAdaptor.java  DVVectorLike.java  DVZipped.java  DeviceViewable.cpp  DeviceViewable.java  FakeVectors.cpp  For.java  Functor.cpp  Functor.java  JThrustRTC_Native.h  Kernel.java  Merging.cpp  Native.java  PrefixSums.cpp  Reductions.cpp  Reordering.cpp  Searching.cpp  Sorting.cpp  TRTC.java  (+2 more)
java/test/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_adjacent_difference.java  test_binary_search.java  test_constant.java  test_copy.java  test_count.java  test_counter.java  test_custom_vector.java  test_discard.java  test_equal.java  test_extrema.java  test_fill.java  test_find.java  test_for.java  test_for_each.java  test_gather.java  test_inner_product.java  test_logical.java  test_merge.java  test_mismatch.java  test_partition.java  test_permutation.java  test_reduce.java  test_remove.java  test_replace.java  test_reverse.java  test_scan.java  test_scan_by_key.java  test_scatter.java  test_sequence.java  test_sort.java  test_swap.java  test_tabulate.java  test_transform.java  test_transform_iter.java  test_transform_reduce.java  test_transform_scan.java  test_trtc.java  (+2 more)
python/: AdjacentDifference.py  CMakeLists.txt  Context.hpp  Context.py  DVCounter.hpp  DVCustomVector.hpp  DVDiscard.hpp  DVPermutation.hpp  DVReverse.hpp  DVTuple.hpp  DeviceViewable.hpp  Fill.py  ForEach.py  ForLoop.py  Functor.py  PyThrustRTC.cpp  README.md  Replace.py  Tabulate.py  ThrustRTC.py  __init__.py  adjacent_difference.hpp  api.h  api_Context.cpp  api_Copying.cpp  api_DVTuple.cpp  api_DVVector.cpp  api_DeviceViewable.cpp  api_FakeVectors.cpp  api_Functor.cpp  api_Merging.cpp  api_PrefixSums.cpp  api_Reductions.cpp  api_Reordering.cpp  api_Searching.cpp  api_Sorting.cpp  api_Transformations.cpp  api_utils.cpp  binary_search.hpp  fill.hpp  (+10 more)
python/PyThrustRTC/: CMakeLists.txt  Context.hpp  DVConstant.hpp  DVCounter.hpp  DVCustomVector.hpp  DVDiscard.hpp  DVPermutation.hpp  DVRange.hpp  DVReverse.hpp  DVTransform.hpp  DVTuple.hpp  DVVector.hpp  DVZipped.hpp  DeviceViewable.hpp  PyThrustRTC.cpp  adjacent_difference.hpp  binary_search.hpp  copy.hpp  count.hpp  equal.hpp  extrema.hpp  fill.hpp  find.hpp  for.hpp  for_each.hpp  functor.hpp  gather.hpp  inner_product.hpp  logical.hpp  merge.hpp  mismatch.hpp  partition.hpp  reduce.hpp  remove.hpp  replace.hpp  scan.hpp  scatter.hpp  sequence.hpp  sort.hpp  swap.hpp  (+6 more)
python/ThrustRTC/: AdjacentDifference.py  Context.py  Copying.py  DVTuple.py  DVVector.py  DeviceViewable.py  FakeVectors.py  Fill.py  Functor.py  Merging.py  Native.py  PrefixSums.py  Reductions.py  Reordering.py  Replace.py  Searching.py  Sequence.py  Sorting.py  Tabulate.py  Transform.py  Transformations.py  __init__.py  cffi.py  cffi_build.py  utils.py
python/demo/: histogram.py  k-means.py
python/test/: CMakeLists.txt  test_adjacent_difference.py  test_binary_search.py  test_constant.py  test_copy.py  test_count.py  test_counter.py  test_cupy.py  test_custom_vector.py  test_discard.py  test_equal.py  test_extrema.py  test_fft.py  test_fill.py  test_find.py  test_for.py  test_for_each.py  test_gather.py  test_inner_product.py  test_logical.py  test_merge.py  test_mismatch.py  test_multithread.py  test_numba.py  test_partition.py  test_permutation.py  test_range.py  test_reduce.py  test_remove.py  test_replace.py  test_reverse.py  test_scan.py  test_scan_by_key.py  test_scatter.py  test_sequence.py  test_sort.py  test_swap.py  test_tabulate.py  test_transform.py  test_transform_iter.py  (+5 more)
test/: CMakeLists.txt  test_adjacent_difference.cpp  test_binary_search.cpp  test_constant.cpp  test_copy.cpp  test_count.cpp  test_counter.cpp  test_custom_vector.cpp  test_discard.cpp  test_equal.cpp  test_extrema.cpp  test_fill.cpp  test_find.cpp  test_for.cpp  test_for_each.cpp  test_gather.cpp  test_inner_product.cpp  test_logical.cpp  test_merge.cpp  test_mismatch.cpp  test_partition.cpp  test_permutation.cpp  test_reduce.cpp  test_remove.cpp  test_replace.cpp  test_reverse.cpp  test_scan.cpp  test_scan_by_key.cpp  test_scatter.cpp  test_sequence.cpp  test_sort.cpp  test_swap.cpp  test_tabulate.cpp  test_transform.cpp  test_transform_iter.cpp  test_transform_reduce.cpp  test_transform_scan.cpp  test_trtc.cpp  test_unique.cpp  test_zipped.cpp
(+184 files in other folders)
